--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+nav {
+    display: flex;
+    justify-content: space-around;
+    width: 40%;
+    margin-left: 30%;
+    border-bottom: solid 2px #ccc;
+    margin-bottom: 20px;
+    font-size: 20px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav a, nav a:visited, nav a:active, nav a:hover {
+    text-decoration: none;
+    padding: 10px;
+    color: #555;
+}
+nav a.selected {
+    background: #000 !important;
+    color: #fff !important;
 }
